sidebar: sidebar-name resolved, details-bar&edit-mode: overflow resolved

--- a/styles/details-bar.css
+++ b/styles/details-bar.css
@@ -90,6 +90,11 @@
     padding: 0.5rem;
 }
 
+#machine-details-tab-info {
+    display: flex;
+    flex-direction: column;
+}
+
 #machine-details-tab-info>div {
     padding: 1rem 0;
 }
@@ -98,7 +103,7 @@
     border-bottom: 2px solid rgb(55, 71, 79);
 }
 
-#machine-general-info>div, #machine-aft-casino, #machine-tito-system, #machine-service-tab-info>div:first-child, #machine-service-mode, #machine-service-info>div {
+#machine-general-info>div, #machine-aft-casino, #machine-jackpot-casino, #machine-tito-system, #machine-service-tab-info>div:first-child, #machine-service-mode, #machine-service-info>div {
     display: flex;
     align-items: center;
 }
@@ -121,10 +126,20 @@
     margin-left: 1.3rem;
 }
 
+#machine-jackpot {
+    display: flex;
+    flex-direction: column;
+}
+
 #machine-last-jackpot {
+    flex: 1;
     padding: 0.5rem 1.3rem;
     padding-bottom: 0;
     color: white;
+}
+
+#machine-last-jackpot>.overflow-content {
+    flex: 1;
 }
 
 #info-content::-webkit-scrollbar {
@@ -217,7 +232,7 @@
 
 #machine-meters-tab-info {
     display: flex;
-    flex-flow: column;
+    flex-direction: column;
 }
 
 #machine-meters-tab-header {
