--- a/styles/edit-mode.css
+++ b/styles/edit-mode.css
@@ -7,6 +7,8 @@
     transition: all 0.1s ease;
     padding: 1rem 0;
     transform: translateX(0);
+    display: flex;
+    flex-flow: column;
 }
 
 #edit-mode.collapse {
@@ -65,6 +67,7 @@
     margin-top: 1rem;
     width: 100%;
     background: rgb(38, 50, 56);
+    flex: 1;
 }
 
 #edit-machine-content>div {
