--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -9,7 +9,7 @@
     color: rgb(120, 144, 156);
     cursor: default;
     display: flex;
-    flex-flow: column wrap;
+    flex-direction: column;
     background-color: rgb(38, 50, 56);
     font-size: 20px;
     box-sizing: border-box;
@@ -23,8 +23,11 @@
 
 #sidebar-name {
     width: 100%;
-    height: 15%;
-    flex-flow: row wrap;
+}
+
+#sidebar-name>div {
+    width: 100%;
+    padding: 0.5rem 1.2rem;
 }
 
 .team-name {
@@ -35,27 +38,32 @@
 .collapse .list-management>.custom-tooltip, .collapse #global-search>.custom-tooltip {
     text-align: center;
     background-color: transparent;
+    width: 100%;
 }
 
-.collapse #head-name, .collapse #icon-collapse, .collapse #global-search {
+.collapse #head-name {
     padding: 0;
-    justify-content: center;
+    display: block;
+}
+
+.collapse #icon-collapse, .collapse #global-search, .collapse #team-logo {
+    position: relative;
     width: 100%;
-    height: 33%;
+    padding: 0.5em 0.2em;
+    top: 0;
+    right: 0;
 }
 
 #icon-collapse {
-    height: 50%;
-    width: 15%;
+    position: absolute;
+    top: 0.5rem;
+    right: 0.5rem;
     cursor: pointer;
 }
 
 #global-search {
-    width: 100%;
-    height: 50%;
-    padding-left: 1.5em;
     cursor: pointer;
-    justify-content: flex-start;
+    display: flex;
 }
 
 #global-search>div {
@@ -196,16 +204,10 @@
 }
 
 #head-name {
-    width: 80%;
-    height: 50%;
-    justify-content: flex-start;
-    flex-flow: row wrap;
-    float: left;
-    padding-left: 5%;
+    display: inline-flex;
 }
 
 #navigation-name>.team-name {
-    width: 100%;
     padding-left: 5%;
     opacity: 1;
 }
